Bug 179032 - KFileDialog::getExistingDirectory provided hidden folder not shown
Summary: KFileDialog::getExistingDirectory provided hidden folder not shown
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.1
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-29 10:55 UTC by Ruben Vandamme
Modified: 2009-06-30 00:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ruben Vandamme 2008-12-29 10:55:01 UTC
Version:            (using KDE 4.1.3)
OS:                Linux
Installed from:    Gentoo Packages

When a hidden directory is provided as an argument to KFileDialog::getExistingDirectory it is not shown in the dialog:

KFileDialog::getExistingDirectory( "/home/user/.folder" );

The dialog seems to cut of the path until it no longer contains hidden folder and then uses that "new" path. The path in the text box is also cut. In the case of the example "/home/user" is shown.

The dialog should switch to "show hidden folders" automatically when a hidden folder is given as an argument and of course not cut the path.
Comment 1 Dario Andres 2009-06-30 00:19:23 UTC
SVN commit 989309 by darioandres:

Activate the show hidden folders mode if the setCurrentUrl() function gets a 
hidden folder URL.

BUG: 179032



 M  +15 -5     kdirselectdialog.cpp  
 M  +5 -0      kfiletreeview.cpp  
 M  +6 -0      kfiletreeview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=989309
Comment 2 Dario Andres 2009-06-30 00:51:51 UTC
SVN commit 989317 by darioandres:

Backport to 4.3branch of:
SVN commit 989309 by darioandres:

Activate the show hidden folders mode if the setCurrentUrl() function gets a 
hidden folder URL.

CCBUG: 179032



 M  +15 -5     kdirselectdialog.cpp  
 M  +5 -0      kfiletreeview.cpp  
 M  +6 -0      kfiletreeview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=989317