Activate the show hidden folders mode if the setCurrentUrl() function gets a hidden folder URL.

BUG: 179032


svn path=/trunk/KDE/kdelibs/; revision=989309